add Japanese fonts to code document with babel package

--- a/zref-vario-code.tex
+++ b/zref-vario-code.tex
@@ -41,6 +41,18 @@
 
 \documentclass{l3doc}
 
+\usepackage[main=english]{babel}
+\usepackage{fontspec}
+
+\babelfont{rm}{CMU Serif}
+\babelfont{sf}{CMU Sans Serif}
+\babelfont{tt}{CMU Typewriter Text}
+
+\babelprovide[onchar=ids fonts]{japanese}
+\babelfont[japanese]{rm}{Harano Aji Mincho}
+\babelfont[japanese]{sf}[Scale=0.9]{Harano Aji Gothic}
+\babelfont[japanese]{tt}[Scale=0.8]{Harano Aji Gothic}
+
 % Have \GetFileInfo pick up date and version data.
 \usepackage{zref-vario}
 
